merge new-xdm into master